--- a/Home.html
+++ b/Home.html
@@ -37,12 +37,17 @@
               >Home</a
             >
             <a
-              href="#"
+              href="services.html"
+              class="menu-item text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
+              >Services</a
+            >
+            <a
+              href="About.html"
               class="menu-item text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
               >About Us</a
             >
             <a
-              href="#"
+              href="contact.html"
               class="menu-item text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
               >Contact us</a
             >
