--- a/RegisterForm.html
+++ b/RegisterForm.html
@@ -8,43 +8,48 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="container">
-        <div class="navbar-content">
+        <div class="container">
+          <div class="navbar-content">
             <div class="company-name">DERN Bank</a>
             </div>
-          <div class="logo">
-            <img
-              class="h-8 w-auto"
-              src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500"
-              alt="Your Company"
-            />
-          </div>
-          <div class="menu">
-            <a
-              href="Home.html"
-              class="menu-item bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
-              aria-current="page"
-              >Home</a
-            >
-            <a
-              href="#"
-              class="menu-item text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
-              >About Us</a
-            >
-            <a
-              href="#"
-              class="menu-item text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
-              >Contact us</a
-            >
-            <a
-              href="RegisterForm.html"
-              class="menu-item text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
-              >Register</a
-            >
+            <div class="logo">
+              <img
+                class="h-8 w-auto"
+                src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500"
+                alt="Your Company"
+              />
+            </div>
+            <div class="menu">
+              <a
+                href="Home.html"
+                class="menu-item bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
+                aria-current="page"
+                >Home</a
+              >
+              <a
+                href="services.html"
+                class="menu-item text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
+                >Services</a
+              >
+              <a
+                href="About.html"
+                class="menu-item text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
+                >About Us</a
+              >
+              <a
+                href="contact.html"
+                class="menu-item text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
+                >Contact us</a
+              >
+              <a
+                href="RegisterForm.html"
+                class="menu-item text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
+                >Register</a
+              >
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
     <form class="signup" action="#" method="post">
       <h3>Sign up</h3>
       <label for="email">Email:</label>
