--- a/contact.html
+++ b/contact.html
@@ -50,5 +50,37 @@
           </div>
         </div>
       </nav>
+      <div class="contact"><h1>CONTACT US</h1></div>
+      <div class="contact1">
+        <h2>GENERAL OPENING HOURS</h2>
+        <p>Monday-Friday <br> 09.00-17.00</p>
+      </div>
+      <div class="contact2">
+        <h2>PHONE NUMBERS</h2>
+        <p>0788856810<br>0788856710</p>
+        <button class="register-button" onclick="window.location.href='inquiryForm.html'">Send Inquiry</button>
+      </div>
+      <div class="contact3">
+        <img src="./Screenshot 2024-02-27 002917.jpg" alt="">
+      </div>
+      <!-- <div class="logos">
+        <img src="./download-removebg-preview.png" alt="Instagram">
+        <img src="./twitter.jpg" alt="twitter">
+    </div> -->
+    <form class="Subscribe" action="#" method="post">
+        <h3>Subscribe to our newsletter</h3>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
+  
+        <label for="fullName">Full Names:</label>
+        <input type="text" id="fullname" name="password" required />
+  
+        <button class="register-button" onclick="window.location.href='inquiryForm.html'">Subscribe</button>
+        <!-- Error message -->
+        <div class="error"></div>
+      </form>
+      <footer>
+        <p>&copy; 2024 DERN Bank. All rights reserved.</p>
+    </footer>
 </body>
 </html>
